--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>WELCOME TO MY BLOG,LIKE AND SUBSCRIBE</h1>
+        <h1>WELCOME TO MY BLOG</h1>
     </header>
     <article>
         <h2>RANDY MIANA PERSONAL BLOG</h2>
