--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <center>
     <title>My Simple Blog</title>
+
     <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
     <header>
@@ -12,7 +15,7 @@
     </header>
     <article>
         <h2>RANDY MIANA PERSONAL BLOG</h2>
-        <p>This is the content of my first blog post. I'm learning HTML and CSS!</p>
+        <p></p>
     </article>
     <footer>
         <p>&copy; 2023 My Simple Blog</p>
