--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        img {
+          border-radius: 50%;
+        }
+        </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <center>
@@ -17,6 +22,9 @@
         <h2>RANDY MIANA PERSONAL BLOG</h2>
         <p></p>
     </article>
+    <section>
+        <img src="vector1.jpg" alt="" height="500" width="500">
+    </section>
     <footer>
         <p>&copy; 2023 My Simple Blog</p>
     </footer>
